2004/03/11 22:40 (-0500) muppetman

	* Glib.pm, NEWS, README, Makefile.PL: beta release 1.039

	* Glib.exports: sort the list, to make it easier to spot missing
	symbols.  add missing symbols.

	* GBoxed.xs: fix dubious logic in parameter test.

2004/03/11 21:51 (-0500) muppetman

	* README: minor fixups.

2004/03/10 11:30 (-0500) muppetman

	D Changes
	M MANIFEST
	  remove the grossly-out-of-date and unused Changes file.

2004/03/08 23:52 (-0500) muppetman

	FIXME sweep:

	* GMainLoop.xs, GType.xs: cleanup and commentary

	* GObject.xs, t/5.t: make the 'bad property' message from set() match
	the one from new().  clean up properly before croaking if new()
	encounters a bad property name.  verify this behavior with tests.

	* GParamSpec.xs: fix ALIAS on param_spec/boxed/object to remove
	invalid symbol; document the fact that param_spec is unimplemented.

	* GValue.xs: fix a nasty bug in gperl_value_from_sv that would've
	resulted in a segfault when trying to read the C pointer out of an
	SV containing a GParamSpec; implement the other direction in
	gperl_sv_from_value.  there's currently no way to trigger these in
	Glib or Gtk2, but it would be conceivable to run across GParamSpec
	properties in other GObject-based bindings, so we don't want to barf
	on them.

	* GenPod.pm: rework and simplify internal function podify_see_alsos()

	* t/9.t, t/a.t: use version guards on tests that suffer from GLib
	bugs that are now fixed.

	* TODO: updated

2004/03/07 23:54 (-0500) muppetman

	* GenPod.pm: don't add L<> around items that already have it in
	podify_see_alsos

2004/03/07 03:33 (-0500) rwmcfa1

	* GenPod.pm, ParseXSDoc.pm: added support for the __gerror__ keyword on
	=for apidoc lines. to be used at a latter date.

2004/03/05 00:28 (-0500) muppetman

	* Makefile.PL: add version checks to the import attempts for our
	black-sheep ExtUtils modules; more recent versions actually support
	the version checks.
